[package]
name = "window_manager"
version = "0.8.0"
edition = "2021"
links = "X11"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = "2.19.1"
log = "0.4.16"
log4rs = "1.1.1"
rand = "0.8.5"
libc = "0.2.65"
cairo-sys-rs = "0.15.1"
cairo-rs = { version = "0.15.12", features = ["xlib"] }
pango = "0.15.10"
pangocairo = "0.15.1"
chrono = "0.4.19"
librsvg = { git="https://gitlab.gnome.org/GNOME/librsvg" }
zbus = "3.4.0"
futures = "0.3.1"
gtk = "0.16.1"
gdk = "0.16.0"
clap = { version = "4.0.23", features = ["derive"] }
system_shutdown = "3.0.0"
gio = "0.16.3"
glib = "0.16.3"
toml = "0.5.9"
serde = "1.0.147"
freedesktop_entry_parser = "1.3.0"

[features]
default = ["bar"]
bar = []
