[package]
name = "window_manager"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alsa", "pulse"]
alsa = ["dep:alsa"]
pulse = ["libpulse-binding", "pulsectl-rs"]

[dependencies]
alsa = { version = "0.7.0", optional = true }
ariadne = "0.1.5"
cairo-rs = { version = "0.16.3", features = ["xcb"] }
cairo-sys-rs = "0.16.3"
chrono = { version = "0.4.19", features = ["unstable-locales"] }
clap = { version = "4.0.23", features = ["derive"] }
freedesktop_entry_parser = "1.3.0"
gdk = "0.16.0"
gio = "0.16.3"
glib = "0.16.3"
gtk = "0.16.1"
include_dir = "0.7.3"
itertools = "0.10.5"
libc = "0.2.65"
# Dependency of `pulsectl-rs`, we explicitly need it to access the `Volume` type.
libpulse-binding = { version = "2.24.0", optional = true }
librsvg = { version="2.55.1", git="https://gitlab.gnome.org/GNOME/librsvg" }
log = "0.4.16"
log4rs = "1.1.1"
pango = { version = "0.16.3", features = ["v1_44"]}
pangocairo = "0.16.3"
parking_lot = "0.12.1"
pulsectl-rs = { version = "0.3.2", optional = true }
rand = "0.8.5"
strsim = "0.10.0"
system_shutdown = "3.0.0"
x11 = "2.18.1"
xcb = { version = "1.2.0", features = ["xlib_xcb", "randr", "render", "debug_atom_names"] }
zbus = "3.4.0"
